add new theme variant "#2"
It's mix of yellow/orange tones with a bit of blue.

Main use case is for VSCode web, for which we don't support theme customization.

--- a/package.json
+++ b/package.json
@@ -54,6 +54,11 @@
         "label": "Pastel Evening Dark",
         "uiTheme": "vs-dark",
         "path": "./dist/themes/pastel_evening_dark.json"
+      },
+      {
+        "label": "Pastel Evening Dark #2",
+        "uiTheme": "vs-dark",
+        "path": "./dist/themes/pastel_evening_dark_v2.json"
       }
     ],
     "markdown.previewStyles": [
